# firecracker

./: .gitlab-ci.yml  README-ORIGIN.md  README.md  release.sh
api_server/: Cargo.toml
api_server/src/: lib.rs  parsed_request.rs
api_server/src/request/: mod.rs  vtfs.rs
devices/: Cargo.toml
devices/src/virtio/: mod.rs
devices/src/virtio/vtfs/: device.rs  error.rs  filesystem.rs  fuse_backend.rs  mod.rs  util.rs
fuse_gen/src/: fuse.rs  wrapper.rs
memory_model/src/: guest_memory.rs  mmap.rs
src/: main.rs
src/api_server/: Cargo.toml
src/api_server/src/: parsed_request.rs
src/api_server/src/request/: machine_configuration.rs  mod.rs  vhost_net.rs  vu_block.rs
src/api_server/swagger/: firecracker.yaml
src/arch/: Cargo.toml
src/arch/src/: lib.rs
src/arch/src/x86_64/: mod.rs
src/devices/: Cargo.toml
src/devices/src/virtio/: mod.rs  queue.rs
src/devices/src/virtio/net/: device.rs  event_handler.rs  mod.rs
src/devices/src/virtio/vhost/: mod.rs  net.rs
src/devices/src/virtio/vhost_user/: block.rs  event_handler.rs  mod.rs  ucloud_ext.rs
src/devices/src/virtio/vsock/unix/: muxer.rs
src/firecracker/: Cargo.toml
src/logger/src/: metrics.rs
src/utils/src/net/: tap.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  resources.rs  rpc_interface.rs  vstate.rs
src/vmm/src/default_syscalls/: filters.rs
src/vmm/src/device_manager/: mmio.rs
src/vmm/src/vmm_config/: machine_config.rs  mod.rs  vhost_net.rs  vu_block.rs
sys_util/src/: fs.rs
vmm/: Cargo.toml
vmm/src/: error.rs  lib.rs
