[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
libc = ">=0.2.39"
dumbo = { path = "../dumbo" }
logger = { path = "../logger" }
vm-memory = { version = ">=0.2.0", features = ["backend-mmap"] }
utils = { path = "../utils" }
net_gen = { path = "../net_gen" }
polly = { path = "../polly" }
rate_limiter = { path = "../rate_limiter" }
snapshot = { path = "../snapshot" }
versionize = { git = "https://github.com/firecracker-microvm/versionize", tag = "v0.1.0" }
versionize_derive = { git = "https://github.com/firecracker-microvm/versionize_derive", tag = "v0.1.0" }
virtio_gen = { path = "../virtio_gen" }
vhost_rs = { git = "ssh://git@git.ucloudadmin.com/torpedo/vhost.git", branch = "fea-ucloud_ext-200608", package = "vhost", features = ["vhost-user-master"], optional = true}
vhost_aaa = { path = "/root/code/rust/vhost", package="vhost", features = ["vhost-net"]}
memfd = "0.3.0"
thiserror = "1.0"

[features]
vublock = ["vhost_rs"]