[package]
name = "firecracker"
version = "0.21.1"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]

[dependencies]
libc = ">=0.2.39"
timerfd = ">=1.0"

api_server = { path = "../api_server" }
logger = { path = "../logger" }
mmds = { path = "../mmds" }
polly = { path = "../polly" }
seccomp = { path = "../seccomp" }
utils = { path = "../utils" }
vmm = { path = "../vmm" }

[features]
default = ["hugetlb", "vublock"]
hugetlb = ["api_server/hugetlb"]
vublock = ["api_server/vublock"]